crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__rich_text.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "filter::rich_text":
    kind: filter
    has_doc: false
  "filter::rich_text_snippet":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "pretix.base.templatetags.rich_text::filter::rich_text": no_argument
  "pretix.base.templatetags.rich_text::filter::rich_text_snippet": no_argument
block_specs: {}
