crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__safelink.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::answer_token":
    kind: tag
    has_doc: false
  "tag::safelink":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "pretix.base.templatetags.safelink::tag::answer_token":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: request
            requirement: required
            kind: Variable
          - name: answer
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "pretix.base.templatetags.safelink::tag::safelink":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: url
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
filter_arities: {}
block_specs: {}
