crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__textbubble.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::endtextbubble":
    kind: tag
    has_doc: false
  "tag::textbubble":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "pretix.base.templatetags.textbubble::tag::endtextbubble":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters: []
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "pretix.base.templatetags.textbubble::tag::textbubble":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: type
            requirement: required
            kind: Variable
          - name: args
            requirement: optional
            kind: VarArgs
        positional_only: 0
        variadic_keyword: kwargs
    as_var: strip
filter_arities: {}
block_specs: {}
