crates/djls-project/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__unidecode.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "filter::unidecode":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "pretix.base.templatetags.unidecode::filter::unidecode": no_argument
block_specs: {}
